--- a/glossary.html
+++ b/glossary.html
@@ -580,7 +580,7 @@ header {
                     </li>
                     <li>
                         <span class="glossary-term">Anesthesia [an-es-THEE-zhuh]:</span>
-                        <span class="glossary-definition">o	The use of medications (called anaesthetics) to prevent pain during surgery. There are various types of anaesthetics including local, regional and general anaesthesia, each serving different medical needs. Most craniofacial surgery is performed under a general anaesthetic.</span>
+                        <span class="glossary-definition">The use of medications (called anaesthetics) to prevent pain during surgery. There are various types of anaesthetics including local, regional and general anaesthesia, each serving different medical needs. Most craniofacial surgery is performed under a general anaesthetic.</span>
                     </li>
                     </ul>
             </div>
