--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
 
                     <div class="team-members">
                         <div class="team-member">
-                            <img src="/img/images/BMC_2T5_Stefanie_Wang.jpg" alt="Picture of Stefanie Jinyin Wang" class="team-portrait">
+                            <img src="/img/images/Bios/StefanieJinyinWang.jpeg" alt="Picture of Stefanie Jinyin Wang" class="team-portrait">
                             <h3>Stefanie Jinyin Wang</h3>
                             <h4>BA&Sc, MSCBMC</h4>
                             <p>Medical Illustrator and Developer</p>
                             <p></p>
                         </div>
                         <div class="team-member">
-                            <img src="https://via.placeholder.com/150" alt="Team Member 2" class="team-portrait">
+                            <img src="/img/images/Bios/Shelley Wall headshot 2025.png" alt="Team Member 2" class="team-portrait">
                             <h3>Dr. Shelley Wall</h3>
                             <h4>AOCAD, MScBMC, PhD, CMI, FAMI</h4>
                             <p>Supervisor, Associate Director and Associate Professor</p>
-                            <p></p> </div>
+                            <p>Biomedical Communications graduate program, University of Toronto</p> </div>
                         <div class="team-member">
-                            <img src="https://via.placeholder.com/150" alt="Team Member 3" class="team-portrait">
+                            <img src="/img/images/Bios/Forrest, Christopher_Studio 14mar2019_DSC_0111.jpg" alt="Team Member 3" class="team-portrait">
                             <h3>Dr. Christopher R. Forrest</h3>
                             <h4>MD, MSc, FRCSC, FACS, FAAP</h4>
                             <p>Content Advisor, Surgeon-Investigator </p>
-                            <p></p> </div>
+                            <p>The Hospital for Sick Children, Department of Surgery, Temerty Faculty of Medicine, University of Toronto</p> </div>
                     </div>
                 </div>
             </div>
