--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="content-stack">
                 <p class="intro-text">
-                    This is a narrative based resource that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
+                    This is a comprehensive resource that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
                 </p>
                 <h4>This resource is currently optimized for laptop or desktop use only.</h4>
                 <button class="btn btn-primary-orange" id="startbtn" onclick="startJourney()">Start</button>
