Added attributions to all

--- a/downloadables.html
+++ b/downloadables.html
@@ -219,7 +219,7 @@ header {
     object-fit: cover; /* Ensures images cover the area without distortion */
 }
 
-.download-icon-wrapper {
+/* .download-icon-wrapper {
     background-color: var(--light-blue);
     color: var(--dark-blue);
     width: 80px;
@@ -230,7 +230,7 @@ header {
     align-items: center;
     font-size: 3em;
     margin-bottom: 15px;
-}
+} */
 
 .download-item h3 {
     color: var(--dark-blue);
@@ -439,9 +439,9 @@ header {
                 <div class="download-grid">
                         <a href="/img/pdfs/Benefits vs Responsibilities.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
-                            <i class="fas fa-file-pdf"></i>
+                            <img src="/img/pdfs/Benefits vs Responsibilities.png"  width="300" >  
                         </div>
-                        <h3>Benefits vs Responsibilities</h3>
+                        <h3>Benefits vs Responsibilities</h3> 
                         <p></p>
                     <!-- <a href="path/to/patient_guide.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
