--- a/glossary.html
+++ b/glossary.html
@@ -603,6 +603,10 @@ header {
                 <h2 class="letter-heading">C</h2>
                 <ul class="glossary-list">
                     <li>
+                        <span class="glossary-term">Consultation Meeting [kon-suhl-TAY-shun MEE-ting]:</span>
+                        <span class="glossary-definition">A meeting where a patient talks with a surgeon about a surgery they might need. The surgeon checks if the surgery is a good idea, explains what will happen, talks about any risks, and answers the patient’s questions.</span>
+                    </li>
+                    <li>
                         <span class="glossary-term">Coronal Suture [kor-roh-nuhl soo-CH-er]:</span>
                         <span class="glossary-definition">Refers to a specific suture (line where skull bones meet) that runs horizontally across the top of the head.</span>
                     </li>
