--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ animation-iteration-count: infinite;
                 <p class="intro-text">
                     This is a comprehensive resource that will teach you the basics of Endoscopic and Cranial Vault surgical journeys.
                 </p>
-                <h4>This resource is currently optimized for laptop or desktop use only.</h4>
+                <h4>This resource is currently optimized for computer or tablet use.</h4>
                 <button class="btn btn-primary-orange" id="startbtn" onclick="startJourney()">Start</button>
             </div>
 
