Responsiveness of poster, and some imgs

--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -16,9 +16,9 @@
 </style>
 
 <body class="page-tutorial">
-        <div class="static-title-container">
+        <!-- <div class="static-title-container">
             <h2>This is a tutorial page. Click the next arrow to keep going.</h2>
-        </div>
+        </div> -->
    
         <div id="tooltip-fixed-overlay">
         <div class="static-tooltip-container arrow-top" style="left: 10px; top: 60px; --arrow-horizontal-offset: 10%;">
@@ -34,14 +34,14 @@
         </div>
 
         <div class="static-tooltip-container arrow-bottom" style="left: 10px; bottom: 65px;">
-            <div class="static-tooltip-content">Click any chapter button to jump to the chapter.</div>
+            <div class="static-tooltip-content">Click buttons to jump to any chapter.</div>
         </div>
 
-        <div class="static-tooltip-container arrow-left" style="left: 100px; top: 205px;">
+        <div class="static-tooltip-container arrow-left" style="left: 120px; top:46%;">
             <div class="static-tooltip-content">Navigate to the previous page.</div>
         </div>
 
-        <div class="static-tooltip-container arrow-right" style="right: 100px; top: 205px;">
+        <div class="static-tooltip-container arrow-right" style="right: 120px; top: 46%;">
             <div class="static-tooltip-content">Navigate to the next page.</div>
         </div>
     </div>
