--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -8,12 +8,6 @@
     <link rel="stylesheet" href="/css/styles.css" />
     </head>
 
-<style>
-.background-img{
-    opacity: 0.5;
-}
-
-</style>
 
 <body class="page-tutorial">
         <!-- <div class="static-title-container">
@@ -76,8 +70,22 @@
             </div>
     </header>
 
+    <style>
+    .background-img-dynamic {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5; /* Adjust opacity as needed */
+    object-fit: cover; /* Remains the magic for proper scaling */
+    z-index: 0; /* Ensures it's at the back */
+}
+    </style>
+
+
     <div class="chapter-container">
-        <img id="backgroundImg" src="" class="background-img" alt="Chapter Page Background"/>
+        <img id="backgroundImg" src="" class="background-img-dynamic" alt="Chapter Page Background"/>
 
 
         <div id="textBox" class="text-box">
