--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -10,9 +10,9 @@
 
 
 <body class="page-tutorial">
-        <!-- <div class="static-title-container">
-            <h2>This is a tutorial page. Click the next arrow to keep going.</h2>
-        </div> -->
+        <div class="static-title-container">
+            <h2>This is a tutorial page.</h2>
+        </div>
    
         <div id="tooltip-fixed-overlay">
         <div class="static-tooltip-container arrow-top" style="left: 10px; top: 60px; --arrow-horizontal-offset: 10%;">
@@ -28,7 +28,7 @@
         </div>
 
         <div class="static-tooltip-container arrow-bottom" style="left: 10px; bottom: 65px;">
-            <div class="static-tooltip-content">Click buttons to jump to any chapter.</div>
+            <div class="static-tooltip-content">Click to jump to any section.</div>
         </div>
 
         <div class="static-tooltip-container arrow-left" style="left: 120px; top:46%;">
