Downloadables title change

--- a/downloadables.html
+++ b/downloadables.html
@@ -435,7 +435,7 @@ header {
             <h1>Downloadable Resources</h1>
 
             <section class="download-section">
-                <h2>General information</h2>
+                <h2>Information sheets</h2>
                 <div class="download-grid">
                         <a href="/img/pdfs/Benefits vs Responsibilities.pdf" download class="download-item">
                         <div class="download-icon-wrapper">
