change downloadables to pdfs

--- a/downloadables.html
+++ b/downloadables.html
@@ -465,16 +465,16 @@ header {
             <section class="download-section">
                 <h2>Diagrams & Images</h2>
                 <div class="download-grid">
-                    <a href="/img/images/Non journey/Types.png" download class="download-item">
+                    <a href="/img/pdfs/Types.pdf" download class="download-item">
                         <img src="/img/images/Non journey/Types.png" alt="Types of Craniosynostosis" class="download-thumbnail">
                         <h3>Types of Craniosynostosis</h3>
                     </a>
-                    <a href="/img/images/Cranial Vault/CVPost-timeline.png" download class="download-item">
+                    <a href="/img/pdfs/CVPost-timeline.pdf" download class="download-item">
                         <img src="/img/images/Cranial Vault/CVPost-timeline.png" alt="A post-surgery timeline for a child, titled Post surgery timeline, with a note that it May change depending on the healing of your child. The timeline starts with Surgery, followed by Hospital stay for 4/5 days. One week after surgery, Swelling reduces. The timeline shows Check-ups with Surgeon marked by orange diamond icons at 1 month, 3 months, and 6 months post-surgery. CT scans are scheduled at 1 month and 1 year post-surgery." class="download-thumbnail">
                         <h3>General timeline: Cranial Vault reshaping</h3>
                         <p></p>
                     </a>
-                    <a href="/img/images/Endoscopic/EPost-timeline.png" download class="download-item">
+                    <a href="/img/pdfs/EPost-timeline.pdf" download class="download-item">
                         <img src="/img/images/Endoscopic/EPost-timeline.png"  alt="A post-surgery timeline for Endoscopic Strip Craniectomy, titled Endoscopic Strip Craniectomy - Post surgery timeline, with a note that it May change depending on the healing of your child. The timeline begins with Surgery, followed by Hospital stay for 2-3 days. A team monitors the infant every hour. One week after surgery, swelling reduces and the first helmet arrives. Two weeks post-surgery, the first helmet fitting occurs. Check-ups with the surgeon (orange diamonds) and orthotics (blue diamonds) are scheduled every 6 weeks. New helmet fittings (yellow circles) occur at approximately 3 months and 7 months post-surgery, with new helmets arriving (orange outlined circles) shortly before the fittings. A CT scan is scheduled 1 year after surgery." class="download-thumbnail">
                         <h3>General timeline: Endoscopic Strip Craniectomy</h3>
                         <p></p>
