move tutorial things

--- a/nonjourney/tutorial.html
+++ b/nonjourney/tutorial.html
@@ -31,11 +31,11 @@
             <div class="static-tooltip-content">Click to jump to any section.</div>
         </div>
 
-        <div class="static-tooltip-container arrow-left" style="left: 120px; top:46%;">
+        <div class="static-tooltip-container arrow-left" style="left: 120px; top:44vh;">
             <div class="static-tooltip-content">Navigate to the previous page.</div>
         </div>
 
-        <div class="static-tooltip-container arrow-right" style="right: 120px; top: 46%;">
+        <div class="static-tooltip-container arrow-right" style="right: 120px; top: 44vh;">
             <div class="static-tooltip-content">Navigate to the next page.</div>
         </div>
     </div>
